# iris-tts

./: .gitignore  HIFIGAN_SETUP.md  README.md  SETUP.md  align_ljspeech.py  analyze_vae.py  debug_vae_loss.py  demo_text_processing.py  demo_vocoder.py  download_ljspeech.py  example.py  example_hifigan_synthesis.sh  investigate_durations.py  pyproject.toml  test_hifigan_integration.py
scripts/: synthesize.py  test_encoder_setup.py  test_synthesis.py  test_trained_encoder.py  test_vae_setup.py  train_encoder.py  train_postnet.py  train_vae.py  validate_vae_checkpoint.py
src/iris/: __init__.py  alignment.py  data.py  datasets.py  encoder.py  hifigan_pretrained.py  model.py  postnet.py  text.py  vae.py  vocoder.py
