[project]
name = "iris"
version = "0.1.0"
description = "Text-to-Speech model built with Keras and JAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keras>=3.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tensorflow>=2.15.0",
    "tqdm>=4.65.0",
    "g2p-en>=2.1.0",
    "nltk>=3.8.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "sacremoses>=0.1.0",
    "wget>=3.2",
    "textgrid>=1.5.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

